[package]
name = "makima_spline"
version = "1.0.2"
authors = ["Richard Körner <grasbock@gmail.com>"]
edition = "2018"
license = "MIT"
description = "An implementation of the modified akima spline interpolation"
repository = "https://github.com/GRASBOCK/makima_spline"
keywords = ["spline", "interpolation", "akima"]
categories = ["mathematics", "science"]
exclude = ["general.png", "step.png", "plot_step.py", "plot_general.py"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
