[package]
name = "makima_spline"
version = "1.1.1"
authors = ["Richard Körner <grasbock@gmail.com>"]
edition = "2018"
license = "MIT"
description = "An implementation of the modified akima spline interpolation"
repository = "https://github.com/GRASBOCK/makima_spline"
keywords = ["spline", "interpolation", "akima"]
categories = ["mathematics", "science"]
exclude = ["testing"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bicubic"]
bi_dimensional = ["bicubic"]

[dependencies]
bicubic = { version = "0.1.1", optional = true}


